🐛(separator) fix vertical separator stretch behavior
Do not use `align-self: stretch` on VerticalSepartor when it has a fixed size
as it prevents to align it with other flex elements.

--- a/src/components/separator/index.scss
+++ b/src/components/separator/index.scss
@@ -31,3 +31,8 @@
     margin-inline: var(--padding);
   }
 }
+
+/* When --size is defined, don't stretch */
+.c__separator--vertical[style*="--size"] {
+  align-self: auto;
+}
